chandeliers-lus/tests/compile_fail/ui/causality/loop.stderr
error: Global `X` depends on itself
 --> tests/compile_fail/ui/causality/loop.rs:3:5
  |
3 |     const X: int = X + 1;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
note: used here within its own definition
 --> tests/compile_fail/ui/causality/loop.rs:3:20
  |
3 |     const X: int = X + 1;
  |                    ^

error: Node `foo` depends on itself
  --> tests/compile_fail/ui/causality/loop.rs:7:5
   |
7  | /     node foo() returns (i : int);
8  | |     let
9  | |         i = foo();
10 | |     tel
   | |_______^
   |
note: used here within its own definition
  --> tests/compile_fail/ui/causality/loop.rs:9:13
   |
9  |         i = foo();
   |             ^^^

error: Variable `f` depends on itself
  --> tests/compile_fail/ui/causality/loop.rs:16:9
   |
16 |         f = 1.0 + f * 0.5;
   |         ^^^^^^^^^^^^^^^^^
   |
note: used here within its own definition
  --> tests/compile_fail/ui/causality/loop.rs:16:19
   |
16 |         f = 1.0 + f * 0.5;
   |                   ^

error: Node `bar` was found to be part of a dependency cycle
  --> tests/compile_fail/ui/causality/loop.rs:24:10
   |
24 |     node bar() returns ();
   |          ^^^
   |
note: The cycle also goes through Node `foo`
  --> tests/compile_fail/ui/causality/loop.rs:21:10
   |
21 |     node foo() returns ();
   |          ^^^
